align generate btn, add unique for pid and mid, fix error msg

--- a/web/src/css/modules/chb.css
+++ b/web/src/css/modules/chb.css
@@ -20,7 +20,7 @@ $(el) {
   }
 
   div {
-    margin-bottom: 12px;
+    margin-bottom: 14px;
   }
 
   .fm__checkbox {
